# server/src/controllers/playlist.controller.js
@@ -3,7 +3,6 @@ const spotify = require('../config/spotify');
 const getPlaylist = async (req, res) => {
   const { id } = req.params;
   try {
-    spotify.setAccessToken(req.headers.authorization.split(' ')[1]);
     const data = await spotify.getPlaylist(id);
     res.status(200).json(data.body);
   } catch (error) {
@@ -13,7 +12,6 @@ const getPlaylist = async (req, res) => {
 
 const getPlaylists = async (req, res) => {
   try {
-    spotify.setAccessToken(req.headers.authorization.split(' ')[1]);
     const data = await spotify.getUserPlaylists();
     res.status(200).json(data.body);
   } catch (error) {
@@ -23,7 +21,6 @@ const getPlaylists = async (req, res) => {
 };
 
 const getPlaylistTracks = async (req, res) => {
-  spotify.setAccessToken(req.headers.authorization.split(' ')[1]);
   const { id } = req.params;
   try {
     const data = await spotify.getPlaylistTracks(id);
@@ -34,45 +31,37 @@ const getPlaylistTracks = async (req, res) => {
 };
 
 const createPlaylist = async (req, res) => {
-  spotify.setAccessToken(req.headers.authorization.split(' ')[1]);
   const { name, description, _public } = req.body;
   try {
     const data = await spotify.createPlaylist(name, {
       description,
       _public,
     });
-    res.status(200).json(data.body);
+    res.status(200).json({
+      message: 'Successfully created playlist',
+      data: data.body,
+    });
   } catch (error) {
+    console.log(error);
     res.status(400).json(error);
   }
 };
 
 const addTracksToPlaylist = async (req, res) => {
-  spotify.setAccessToken(req.headers.authorization.split(' ')[1]);
   const { id } = req.params;
   const { tracks } = req.body;
   try {
     const data = await spotify.addTracksToPlaylist(id, tracks);
-    res.status(200).json(data.body);
-  } catch (error) {
-    res.status(400).json(error);
-  }
-};
-
-const removeTracksFromPlaylist = async (req, res) => {
-  spotify.setAccessToken(req.headers.authorization.split(' ')[1]);
-  const { id } = req.params;
-  const { tracks } = req.body;
-  try {
-    const data = await spotify.removeTracksFromPlaylist(id, tracks);
-    res.status(200).json(data.body);
+    res.status(200).json({
+      message: 'Successfully added track to playlist',
+      data: data.body,
+    });
   } catch (error) {
     res.status(400).json(error);
   }
 };
 
 const changePlaylistDetails = async (req, res) => {
-  spotify.setAccessToken(req.headers.authorization.split(' ')[1]);
   const { id } = req.params;
   const { name, description, _public } = req.body;
   try {
@@ -81,26 +70,26 @@ const changePlaylistDetails = async (req, res) => {
       description,
       _public,
     });
-    res.status(200).json(data.body);
+    res.status(200).json({
+      message: 'Playlist details updated',
+      data: data.body,
+    });
   } catch (error) {
-    res.status(400).json(error);
+    res.status(500).json(error);
   }
 };
 
-const reorderPlaylistTracks = async (req, res) => {
-  spotify.setAccessToken(req.headers.authorization.split(' ')[1]);
+const removeTracksFromPlaylist = async (req, res) => {
   const { id } = req.params;
-  const { range_start, range_length, insert_before } = req.body;
+  const { tracks } = req.body;
   try {
-    const data = await spotify.reorderPlaylistTracks(
-      id,
-      range_start,
-      range_length,
-      insert_before,
-    );
-    res.status(200).json(data.body);
+    const data = await spotify.removeTracksFromPlaylist(id, tracks);
+    res.status(200).json({
+      message: 'Successfully removed',
+      data: data.body,
+    });
   } catch (error) {
-    res.status(400).json(error);
+    res.status(500).json(error);
   }
 };
 
@@ -110,7 +99,6 @@ module.exports = {
   getPlaylistTracks,
   createPlaylist,
   addTracksToPlaylist,
-  removeTracksFromPlaylist,
   changePlaylistDetails,
-  reorderPlaylistTracks,
+  removeTracksFromPlaylist,
 };
